Fix arrow overlap on cta button active state

--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -76,6 +76,11 @@
                 transform: translateY(-50%);
                 content: ' →';
             }
+
+            &:focus,
+            &:active {
+                padding-right: 78px;
+            }
         }
     }
 
